---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "pub fn main() {\n  case 5 {\n    z if <<z>> == <<z>> -> Nil\n    _ -> Nil\n  }\n}\n"
---
import { isEqual, toBitArray } from "../rakun.mjs";

export function main() {
  let $ = 5;
  if (isEqual(toBitArray([$]), toBitArray([$]))) {
    let z = $;
    return undefined;
  } else {
    return undefined;
  }
}
